[package]
name = "atasks"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "*"
slab = "*"
parking_lot = "*"
crossbeam-channel = "*"
futures = "0.3"

[dev-dependencies]
async-std = "*"
rand = "*"
