[package]
name = "atasks"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
ambassador = "*"
slab = "*"
parking_lot = "*"
crossbeam-channel = "*"
futures = "0.3"
async-trait = "*"

[dev-dependencies]
dotenv = "*"
env_logger = "*"
async-std = "*"
rand = "*"
